This solves the bottom spacing problem for desktop and mobile

--- a/clinic.css
+++ b/clinic.css
@@ -27,6 +27,9 @@ article, nav{
 #mainNav { 
     grid-area: nav; 
     }
+#idFooter{
+    grid-area: footer;
+}
 header{
     padding: 0;
     background: white;    
