--- a/clinictypeface.css
+++ b/clinictypeface.css
@@ -29,22 +29,26 @@
     grid-template-areas: 
       "Grid1 Grid2 Grid3"
       "Grid4 Grid5 Grid6";
-    grid-template-rows: auto;  
-    grid-template-columns: 35% 30% 35%;
+    grid-template-rows: auto 30% auto;  
+    grid-template-columns: 35% 35% auto;
     grid-row-gap: 10px;
     grid-column-gap: 10px;
     height: 100vh;
     margin: 0;
     padding-left: 2rem;
+    padding-right: 1rem;
 }
-#idGrid1{
+
+#idGrid1, #idGrid4{
     grid-area: Grid1;
 }
 #idGrid2{
 grid-area: Grid2;
+padding-right: 2rem;
 }
 #idGrid3{
     grid-area: Grid3;
+    padding-left: 1rem;
     }
 #idGrid4{
     grid-area: Grid4;
@@ -55,11 +59,12 @@ grid-area: Grid5;
 #idGrid6{
     grid-area: Grid6;
     }
-.Grid1, .Grid3{
-    background-color: aqua;
+#idFooter{
+    grid-area: footer;
 }
-.Grid2{
-    background-color: aquamarine;
+.typohr{
+    border-style: solid;
+    border-width: 1px; 
 }
 .typoHeader{
     margin-bottom: 0;
@@ -84,4 +89,93 @@ grid-area: Grid5;
     font-weight: bold;
     font-size:24px;
 }
+.typoDetails4{
+    margin:-1rem;
+    font-family: Verdana;
+    color:#b0b0b9;
+    font-size:24px;
+}
+.typoDetails5{
+    margin:-1rem;
+    font-family: Verdana;
+    color:#b0b0b9;
+    font-size:24px;
+    font-style: italic;
+}
+.typoDetails6{
+    margin:-1rem;
+    font-family: Verdana;
+    color:#b0b0b9;
+    font-size:24px;
+    font-weight: bold;
+    padding-right: 1rem;
+}
+.grid2cont{
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: space-between;
+}
+li{
+    text-indent:8px;
+}
+body{
+    display: grid;
+    grid-template-areas: 
+      "header header"
+      "spacer spacer"
+      "article nav"
+      "footer nav";
+    grid-template-rows: 120px 25px auto 500px;  
+    grid-template-columns: 80% 20%;
+    grid-row-gap: 0;
+    grid-column-gap: 0;
+    height: 100vh;
+    margin: 0;
+    } 
 
+@media all and (max-width: 575px) {
+    .typoGrid{
+        display: grid;
+        grid-template-areas: 
+          "Grid1"
+          "Grid2"
+          "Grid3"
+          "Grid4"
+          "Grid5"
+          "Grid6";
+        grid-template-rows: auto;  
+        grid-template-columns: auto;
+        grid-row-gap: 10px;
+        grid-column-gap: 10px;
+        height: 100vh;
+        margin: 0;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+    .classArticleimageTypeface>img{
+        max-width: 40%;
+        padding: 1rem;
+        padding-left: 1rem;
+    }
+    body { 
+        grid-template-areas: 
+          "header"
+          "spacer"
+          "nav"
+          "article"
+          "idFooter";
+        grid-template-rows: 10% 2% 27% 1fr auto;  
+        grid-template-columns: 1fr;
+     } 
+     .typoDetails6{
+        margin:-1rem;
+        font-family: Verdana;
+        color:#b0b0b9;
+        font-size:24px;
+        font-weight: bold;
+        padding-right: 1rem;
+        
+}
+
+}
